# egraph-smt-bv

./: .gitignore  Cargo.toml  README.md  check.smt2  playground.html  playground.sh  playground.smt2  test.md
.config/: nextest.toml
.github/workflows/: ci.yml
dfa/: Cargo.toml
dfa/src/: lib.rs
scripts/: add_or_and.tmp.smt2  different_width_process.py  different_width_timings.py  fast_absolute_value.tmp.smt2  rtl_rewriter_bench_timings.py  rtl_rewriter_bench_timings_process.py  squared_difference.tmp.smt2
solvable/: add_four_two_ways.md  add_four_two_ways.smt2  add_or_and.smt2  fast_absolute_value.smt2  xor_and_or_exchange.smt2
src/: check_sat.egg  check_sat.rs  commands.rs  context.rs  intercept.rs  lib.rs  main.rs  plan.rs  prelude.rs  statistics.rs  status.rs  visualization.rs
src/bv/: mod.rs  small.rs
src/log/: eggloglog.rs  markdown.rs  mod.rs  output.rs  parser.rs  transforms.rs
src/prelude/: ac.egg  add.egg  aig.egg  algebraic.egg  bitwise.egg  bpnf.egg  bv_theory.egg  comparisons.egg  core_theory.egg  div.egg  eq.egg  fold.egg  implications.egg  ite.egg  linsolve.egg  mul.egg  operators.egg  prelude.egg  propositional.egg  ranges.egg  solvers.egg
src/smt2lib/: constants.rs  fun.rs  mod.rs  prelude.rs  sort.rs  term.rs
src/solvers/: bvconst.rs  bvrange.rs  linsolve.rs  linsolve2.rs  mod.rs  proxy.rs  simulator.rs  slice.rs  test_system1_lia.smt2  test_system2.smt2
staging/: add_or_and.smt2  xor_and_or_exchange.smt2
tests/: files.rs
tests/alive2/: issue128475.ll  issue128475.unsat.smt2  issue137161.ll  issue137161.unsat.smt2  issue58624.ll  issue58624.unsat.smt2  issue72512.ll  issue72512.unsat.smt2  issue75004.ll  issue75004.unsat.smt2
tests/instcombine/: issue137161.unsat.smt2
tests/unknown/: add_two.unknown.smt2  assoc.unknown.smt2  shl.unknown.smt2
tests/unsat/: add_bit_width_reduction.unsat.smt2  and_assoc.unsat.smt2  de_morgan.unsat.smt2  (+12 more)
verilog_examples/: combinatorial.tpl
(+201 files in other folders)
