[package]
name = "egraph-smt-bv"
version = "0.1.0"
edition = "2021"

[[test]]
name = "files"
harness = false

[dependencies]
anyhow = "1.0.93"
cap = "0.1.2"
clap = { version = "4.5.20", features = ["derive"] }
egglog = { git = "https://github.com/RiscInside/egglog", rev = "2c576bdc2309739db41c3fd522d1090c3879ae42" }
egraph-serialize = { version = "0.2.0", features = ["graphviz"] }
expect-test = "1.5.1"
hashbrown = "0.15.3"
im-rc = "15.1.0"
indoc = "2.0.6"
itertools = "0.13.0"
lazy_static = "1.5.0"
num-bigint = "0.4.6"
regex = "1.11.1"
serde_json = "1.0.140"
smt2parser = "0.6.1"
tinybitset = "0.0.2"
z3 = "0.12.1"

[dev-dependencies]
glob = "0.3.2"
libtest-mimic = "0.8.1"
which = "7.0.3"

[profile.release]
debug = true
